<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            android:textSize="50sp"/>

        <TextView
            android:id="@+id/tv_new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_new_game"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_normal_btn"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/tv_continue_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_continue_game"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_normal_btn"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/tv_highscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="HIGH SCORE:1,234,567,890"
            android:textSize="20sp"/>

    </LinearLayout>
</layout>
